--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,14 +4,38 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        database_users:
+            entity:
+                class: App\Entity\User
+                property: identifier
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            entry_point: App\Security\LoginFormAuthenticator
+
+            custom_authenticators:
+                - App\Security\LoginFormAuthenticator
+                - App\Security\GoogleAuthenticator
+                - App\Security\GoogleIdentityAuthenticator
+                - App\Security\GitHubAuthenticator
+                - App\Security\GitLabAuthenticator
+
+            form_login:
+                login_path: login
+                check_path: login
+
+            logout:
+                path: /logout
+                target: /
+
+            remember_me:
+                secret: '%kernel.secret%'
+                path: /
+                always_remember_me: true
+                name: S3C0DERREMEMBERME
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
