--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,12 +69,12 @@ jobs:
 #                    restore-keys: |
 #                    ${{ runner.os }}-yarn-cache-node-modules-
 
-            - name: Yarn install
+            #- name: Yarn install
 #                if: steps.yarn-cache-node-modules.outputs.cache-hit != 'true'
-              run: yarn install
+              #run: yarn install
 
-            - name: Yarn build
-              run: yarn run encore production
+            #- name: Yarn build
+            #  run: yarn run encore production
             ## —— Tests ———————————————————————————————————————————————————————————
             - name: Run functionnal and unit tests
               run: make citests
