--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,7 @@ jobs:
         # Docs: https://docs.github.com/en/actions/using-containerized-services
         services:
             postgres:
-                image: postgres:latest
+                image: postgres:15
                 env:
                     POSTGRES_USER: postgres
                     POSTGRES_PASSWORD: postgres
