Update env file

--- a/.env
+++ b/.env
@@ -41,6 +41,13 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/mailer ###
 
 OAUTH_GOOGLE_ID=
+MAILER_DSN=
+OAUTH_GITHUB_CLIENT_ID=
+OAUTH_GITHUB_CLIENT_SECRET=
+OAUTH_GITLAB_CLIENT_ID=
+OAUTH_GITLAB_CLIENT_SECRET=
+OAUTH_GOOGLE_SECRET=
+
 ###> google/apiclient ###
 GOOGLE_API_KEY=
 GOOGLE_CLIENT_ID=
