--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "doctrine/orm": "^2.16",
         "elkuku/symfony-utils": "dev-master",
         "google/apiclient": "^2.15",
-        "knpuniversity/oauth2-client-bundle": "v2.17.0",
+        "knpuniversity/oauth2-client-bundle": "^v2.17.0",
         "league/oauth2-github": "^3.1",
         "league/oauth2-google": "^4.0",
         "omines/oauth2-gitlab": "^3.6",
@@ -103,7 +103,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpstan/phpstan": "^1.10",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^10",
         "rector/rector": "^0.18.6",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
