--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,27 +29,14 @@ jobs:
               with:
                   php-version: ${{ matrix.php-versions }}
                   coverage: none
-                  tools: composer:v2
                   extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite, dom, filter, gd, iconv, json, mbstring, pdo
               env:
                   update: true
             - name: Check PHP Version
               run: php -v
             # —— Composer —————————————————————————————————————————————————————————
-            - name: Validate composer.json and composer.lock
-              run: composer validate
-            - name: Get composer cache directory
-              id: composer-cache
-#              run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-              run: echo "{dir}={$(composer config cache-files-dir)}" >> $GITHUB_OUTPUT
-            - name: Cache composer dependencies
-              uses: actions/cache@v3
-              with:
-                  path: ${{ steps.composer-cache.outputs.dir }}
-                  key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-                  restore-keys: ${{ runner.os }}-composer-
-            - name: Install Composer dependencies
-              run: composer install
+            - name: Install dependencies
+              uses: php-actions/composer@v6
             # —— Symfony ——————————————————————————————————————————————————————————
 #            - name: Check Symfony requirements
 #              run: vendor/bin/requirements-checker
