Update github actions...

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: Tests
 on: [push]
 jobs:
     php-unit-and-functional-tests:
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-latest
         # Docs: https://docs.github.com/en/actions/using-containerized-services
         services:
             postgres:
@@ -21,7 +21,7 @@ jobs:
         steps:
             # —— Setup GitHub actions —————————————————————————————————————————————
             # https://github.com/actions/checkout (official)
-            - name: Git checkout placeholder-service
+            - name: Git checkout
               uses: actions/checkout@v3
             # https://github.com/shivammathur/setup-php (community)
             - name: Setup PHP
@@ -38,30 +38,9 @@ jobs:
             - name: Install dependencies
               uses: php-actions/composer@v6
             # —— Symfony ——————————————————————————————————————————————————————————
-#            - name: Check Symfony requirements
-#              run: vendor/bin/requirements-checker
             - name: Check the Symfony console
               run: bin/console -V
-            # —— Code style —— (Based on this package: https://github.com/OskarStark/php-cs-fixer-ga)
-#            - name: PHP-CS-Fixer
-#              uses: docker://oskarstark/php-cs-fixer-ga
-#              with:
-#                  args: --config=.php_cs.dist --diff --dry-run
-#            -   name: Cache node_modules
-#                uses: actions/cache@v1
-#                id: yarn-cache-node-modules
-#                with:
-#                    path: node_modules
-#                    key: ${{ runner.os }}-yarn-cache-node-modules-${{ hashFiles('**/yarn.lock') }}
-#                    restore-keys: |
-#                    ${{ runner.os }}-yarn-cache-node-modules-
 
-            #- name: Yarn install
-#                if: steps.yarn-cache-node-modules.outputs.cache-hit != 'true'
-              #run: yarn install
-
-            #- name: Yarn build
-            #  run: yarn run encore production
             - name: Install assets
               run: bin/console importmap:install
             ## —— Tests ———————————————————————————————————————————————————————————
@@ -69,8 +48,3 @@ jobs:
               run: make citests
               env:
                   DATABASE_URL: postgres://postgres:postgres@127.0.0.1:${{ job.services.postgres.ports[5432] }}/postgres?charset=UTF-8
-
-            - name: Output log files
-              run: ls /var/log/apache2/
-            - name: aaa
-              run: cat /var/log/apache2/error.log
