--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,8 @@
         "symfony/string": "7.1.*",
         "symfony/translation": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
+        "symfony/ux-icons": "^2.18",
+        "symfony/ux-twig-component": "^2.18",
         "symfony/validator": "7.1.*",
         "symfony/web-link": "7.1.*",
         "symfony/yaml": "7.1.*",
