--- a/composer.json
+++ b/composer.json
@@ -111,6 +111,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.0",
+        "friendsofphp/php-cs-fixer": "^3.86",
         "jawira/doctrine-diagram-bundle": "dev-main",
         "phpstan/phpdoc-parser": "^2",
         "phpstan/phpstan": "^2",
