--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "knpuniversity/oauth2-client-bundle": "^v2.17.0",
         "league/oauth2-github": "^3.1",
         "league/oauth2-google": "^4.0",
+        "php-cs-fixer/shim": "^3.88",
         "phpdocumentor/reflection-docblock": "^5.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "*",
