--- a/composer.json
+++ b/composer.json
@@ -98,7 +98,9 @@
             "echo 'Check for outdated PHP deps:'",
             "composer outdated",
             "echo 'Check for outdated Recipes:'",
-            "composer recipes:update"
+            "composer recipes:update",
+            "echo 'Check style:'",
+            "vendor/bin/php-cs-fixer check"
             ]
     },
     "conflict": {
