--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php-versions: ['8.4', '8.5']
+                php-versions: ['8.4']
         steps:
             # —— Setup GitHub actions —————————————————————————————————————————————
             # https://github.com/actions/checkout (official)
