--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^3",
-        "elkuku/symfony-utils": "dev-master",
+        "elkuku/symfony-utils": "0.2",
         "google/apiclient": "^2.15",
         "knpuniversity/oauth2-client-bundle": "^v2.17.0",
         "league/oauth2-github": "^3.1",
