--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         "php": ">=8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/doctrine-bundle": "^2.10",
+        "doctrine/doctrine-bundle": "^3.0",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^3",
-        "elkuku/symfony-utils": "0.2",
+        "elkuku/symfony-utils": "^0.3",
         "google/apiclient": "^2.15",
         "knpuniversity/oauth2-client-bundle": "^v2.17.0",
         "league/oauth2-github": "^3.1",
