--- a/config/routes/kuku_sfsysteminfo.yaml
+++ b/config/routes/kuku_sfsysteminfo.yaml
@@ -1,3 +1,3 @@
-_kuku_sfsysinfo:
-  resource: '@KuKuSFSystemToolsBundle/config/routes.xml'
-  prefix: /system/info
+#_kuku_sfsysinfo:
+#  resource: '@KuKuSFSystemToolsBundle/config/routes.yaml'
+#  prefix: /system/info
