--- a/config/packages/kuku_sfsysteminfo.yaml
+++ b/config/packages/kuku_sfsysteminfo.yaml
@@ -1,3 +1,3 @@
-#kuku_sf_system_tools:
-#  expose_sf_version: true
-#  expose_php_version: true
+kuku_sf_system_tools:
+  expose_sf_version: true
+  expose_php_version: true
